[tool.poetry]
name = "ai-health-fitness-agent"
version = "0.1.0"
description = ""
authors = ["I552839 <amaranatha.reddy.gowni@sap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
phidata = "^2.7.9"
ollama = "^0.4.7"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
